Add compare_ip operator udfs (#3821)
* ip_compare operator added

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* only type checker issue left

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* fix by modifying ip.sqlTypeName from OTHER to NULL in type checker

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* fix less

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* modify the CalcitePPLFunctionTypeTest text

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* allow CalciteIPComparisonIT in CalciteNoPushdownIT

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* Modify the signature description in udf

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* fix some typing errors

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* modify the udfs for better style

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* Make IpComparisonOperators an inner enum of CompareIPFunction

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* modify registerOperator

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* modify registerOperator

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* add type checker for cidr

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* add javadoc

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

* move switch case to the implement method

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>

---------

Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>
Co-authored-by: Yuanchun Shen <yuanchu@amazon.com>
(cherry picked from commit 6c3efa1475f815fc9025a2e3c533b7b21d9ea8cf)