@@ -221,8 +221,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import java.util.StringJoiner;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.BiFunction;
@@ -243,7 +241,6 @@ import org.apache.calcite.sql.type.SameOperandTypeChecker;
 import org.apache.calcite.sql.type.SqlOperandTypeChecker;
 import org.apache.calcite.sql.type.SqlTypeFamily;
 import org.apache.calcite.sql.type.SqlTypeName;
-import org.checkerframework.checker.nullness.qual.Nullable;
 import org.apache.calcite.sql.validate.SqlUserDefinedFunction;
 import org.apache.calcite.tools.RelBuilder;
 import org.apache.commons.lang3.function.TriFunction;
@@ -258,7 +255,6 @@ import org.opensearch.sql.calcite.utils.OpenSearchTypeFactory;
 import org.opensearch.sql.calcite.utils.PlanUtils;
 import org.opensearch.sql.calcite.utils.UserDefinedFunctionUtils;
 import org.opensearch.sql.exception.ExpressionEvaluationException;
-import org.apache.commons.lang3.tuple.Pair;
 import org.opensearch.sql.executor.QueryType;
 
 public class PPLFuncImpTable {
@@ -341,7 +337,15 @@ public class PPLFuncImpTable {
    * internally.
    */
   private final ImmutableMap<BuiltinFunctionName, List<Pair<CalciteFuncSignature, FunctionImp>>>
-          functionRegistry;
+      functionRegistry;
+
+  /**
+   * The external function registry. Functions whose implementations depend on a specific data
+   * engine should be registered here. This reduces coupling between the core module and particular
+   * storage backends.
+   */
+  private final Map<BuiltinFunctionName, List<Pair<CalciteFuncSignature, FunctionImp>>>
+      externalFunctionRegistry;
 
   /**
    * The registry for built-in agg functions. Agg Functions defined by the PPL specification, whose
@@ -357,24 +361,15 @@ public class PPLFuncImpTable {
    */
   private final Map<BuiltinFunctionName, AggHandler> aggExternalFunctionRegistry;
 
-
-  /**
-   * The external function registry. Functions whose implementations depend on a specific data
-   * engine should be registered here. This reduces coupling between the core module and particular
-   * storage backends.
-   */
-  private final Map<BuiltinFunctionName, List<Pair<CalciteFuncSignature, FunctionImp>>>
-      externalFunctionRegistry;
-
   private PPLFuncImpTable(Builder builder, AggBuilder aggBuilder) {
     final ImmutableMap.Builder<BuiltinFunctionName, List<Pair<CalciteFuncSignature, FunctionImp>>>
-            mapBuilder = ImmutableMap.builder();
+        mapBuilder = ImmutableMap.builder();
     builder.map.forEach((k, v) -> mapBuilder.put(k, List.copyOf(v)));
     this.functionRegistry = ImmutableMap.copyOf(mapBuilder.build());
     this.externalFunctionRegistry = new ConcurrentHashMap<>();
 
     final ImmutableMap.Builder<BuiltinFunctionName, AggHandler> aggMapBuilder =
-            ImmutableMap.builder();
+        ImmutableMap.builder();
     aggBuilder.map.forEach(aggMapBuilder::put);
     this.aggFunctionRegistry = ImmutableMap.copyOf(aggMapBuilder.build());
     this.aggExternalFunctionRegistry = new ConcurrentHashMap<>();
@@ -388,15 +383,15 @@ public class PPLFuncImpTable {
    */
   public void registerExternalFunction(BuiltinFunctionName functionName, FunctionImp functionImp) {
     CalciteFuncSignature signature =
-            new CalciteFuncSignature(functionName.getName(), functionImp.getTypeChecker());
+        new CalciteFuncSignature(functionName.getName(), functionImp.getTypeChecker());
     externalFunctionRegistry.compute(
-            functionName,
-            (name, existingList) -> {
-              List<Pair<CalciteFuncSignature, FunctionImp>> list =
-                      existingList == null ? new ArrayList<>() : new ArrayList<>(existingList);
-              list.add(Pair.of(signature, functionImp));
-              return list;
-            });
+        functionName,
+        (name, existingList) -> {
+          List<Pair<CalciteFuncSignature, FunctionImp>> list =
+              existingList == null ? new ArrayList<>() : new ArrayList<>(existingList);
+          list.add(Pair.of(signature, functionImp));
+          return list;
+        });
   }
 
   /**
@@ -411,11 +406,11 @@ public class PPLFuncImpTable {
   }
 
   public RelBuilder.AggCall resolveAgg(
-          BuiltinFunctionName functionName,
-          boolean distinct,
-          RexNode field,
-          List<RexNode> argList,
-          CalcitePlanContext context) {
+      BuiltinFunctionName functionName,
+      boolean distinct,
+      RexNode field,
+      List<RexNode> argList,
+      CalcitePlanContext context) {
     AggHandler handler = aggExternalFunctionRegistry.get(functionName);
     if (handler == null) {
       handler = aggFunctionRegistry.get(functionName);
@@ -426,8 +421,6 @@ public class PPLFuncImpTable {
     return handler.apply(distinct, field, argList, context);
   }
 
-
-
   public RexNode resolve(final RexBuilder builder, final String functionName, RexNode... args) {
     Optional<BuiltinFunctionName> funcNameOpt = BuiltinFunctionName.of(functionName);
     if (funcNameOpt.isEmpty()) {
@@ -437,11 +430,11 @@ public class PPLFuncImpTable {
   }
 
   public RexNode resolve(
-          final RexBuilder builder, final BuiltinFunctionName functionName, RexNode... args) {
+      final RexBuilder builder, final BuiltinFunctionName functionName, RexNode... args) {
     // Check the external function registry first. This allows the data-storage-dependent
     // function implementations to override the internal ones with the same name.
     List<Pair<CalciteFuncSignature, FunctionImp>> implementList =
-            externalFunctionRegistry.get(functionName);
+        externalFunctionRegistry.get(functionName);
     // If the function is not part of the external registry, check the internal registry.
     if (implementList == null) {
       implementList = functionRegistry.get(functionName);
@@ -449,7 +442,7 @@ public class PPLFuncImpTable {
     if (implementList == null || implementList.isEmpty()) {
       throw new IllegalStateException(String.format("Cannot resolve function: %s", functionName));
     }
-    List<RelDataType> argTypes = Arrays.stream(args).map(RexNode::getType).collect(Collectors.toList());
+    List<RelDataType> argTypes = Arrays.stream(args).map(RexNode::getType).toList();
     try {
       for (Map.Entry<CalciteFuncSignature, FunctionImp> implement : implementList) {
         if (implement.getKey().match(functionName.getName(), argTypes)) {
@@ -458,19 +451,22 @@ public class PPLFuncImpTable {
       }
     } catch (Exception e) {
       throw new ExpressionEvaluationException(
-              String.format(
-                      "Cannot resolve function: %s, arguments: %s, caused by: %s",
-                      functionName, getActualSignature(argTypes), e.getMessage()),
-              e);
+          String.format(
+              "Cannot resolve function: %s, arguments: %s, caused by: %s",
+              functionName, getActualSignature(argTypes), e.getMessage()),
+          e);
     }
     StringJoiner allowedSignatures = new StringJoiner(",");
     for (var implement : implementList) {
-      allowedSignatures.add(implement.getKey().getTypeChecker().getAllowedSignatures());
+      String signature = implement.getKey().typeChecker().getAllowedSignatures();
+      if (!signature.isEmpty()) {
+        allowedSignatures.add(signature);
+      }
     }
     throw new ExpressionEvaluationException(
-            String.format(
-                    "%s function expects {%s}, but got %s",
-                    functionName, allowedSignatures, getActualSignature(argTypes)));
+        String.format(
+            "%s function expects {%s}, but got %s",
+            functionName, allowedSignatures, getActualSignature(argTypes)));
   }
 
   private static String getActualSignature(List<RelDataType> argTypes) {
@@ -488,45 +484,70 @@ public class PPLFuncImpTable {
     /** Maps an operator to an implementation. */
     abstract void register(BuiltinFunctionName functionName, FunctionImp functionImp);
 
-    void registerOperator(BuiltinFunctionName functionName, SqlOperator operator) {
-      SqlOperandTypeChecker typeChecker;
-      if (operator instanceof SqlUserDefinedFunction) {
-        SqlUserDefinedFunction udfOperator = (SqlUserDefinedFunction) operator;
-        typeChecker = extractTypeCheckerFromUDF(udfOperator);
-      } else {
-        typeChecker = operator.getOperandTypeChecker();
-      }
+    /**
+     * Register one or multiple operators under a single function name. This allows function
+     * overloading based on operand types.
+     *
+     * <p>When a function is called, the system will try each registered operator in sequence,
+     * checking if the provided arguments match the operator's type requirements. The first operator
+     * whose type checker accepts the arguments will be used to execute the function.
+     *
+     * @param functionName the built-in function name under which to register the operators
+     * @param operators the operators to associate with this function name, tried in sequence until
+     *     one matches the argument types during resolution
+     */
+    public void registerOperator(BuiltinFunctionName functionName, SqlOperator... operators) {
+      for (SqlOperator operator : operators) {
+        SqlOperandTypeChecker typeChecker;
+        if (operator instanceof SqlUserDefinedFunction udfOperator) {
+          typeChecker = extractTypeCheckerFromUDF(udfOperator);
+        } else {
+          typeChecker = operator.getOperandTypeChecker();
+        }
 
-      // Only the composite operand type checker for UDFs are concerned here.
-      if (operator instanceof SqlUserDefinedFunction
-          && typeChecker instanceof CompositeOperandTypeChecker) {
-        CompositeOperandTypeChecker compositeTypeChecker = (CompositeOperandTypeChecker) typeChecker;
-        // UDFs implement their own composite type checkers, which always use OR logic for argument
-        // types. Verifying the composition type would require accessing a protected field in
-        // CompositeOperandTypeChecker. If access to this field is not allowed, type checking will
-        // be skipped, so we avoid checking the composition type here.
-        register(functionName, wrapWithCompositeTypeChecker(operator, compositeTypeChecker, false));
-      } else if (typeChecker instanceof ImplicitCastOperandTypeChecker) {
-        ImplicitCastOperandTypeChecker implicitCastTypeChecker = (ImplicitCastOperandTypeChecker) typeChecker;
-        register(functionName, wrapWithImplicitCastTypeChecker(operator, implicitCastTypeChecker));
-      } else if (typeChecker instanceof CompositeOperandTypeChecker) {
-        CompositeOperandTypeChecker compositeTypeChecker = (CompositeOperandTypeChecker) typeChecker;
-        // If compositeTypeChecker contains operand checkers other than family type checkers or
-        // other than OR compositions, the function with be registered with a null type checker,
-        // which means the function will not be type checked.
-        register(functionName, wrapWithCompositeTypeChecker(operator, compositeTypeChecker, true));
-      } else if (typeChecker instanceof SameOperandTypeChecker) {
-        SameOperandTypeChecker comparableTypeChecker = (SameOperandTypeChecker) typeChecker;
-        // Comparison operators like EQUAL, GREATER_THAN, LESS_THAN, etc.
-        // SameOperandTypeCheckers like COALESCE, IFNULL, etc.
-        register(functionName, wrapWithComparableTypeChecker(operator, comparableTypeChecker));
-      } else {
-        logger.info(
-            "Cannot create type checker for function: {}. Will skip its type checking",
-            functionName);
-        register(
-            functionName,
-            (RexBuilder builder, RexNode... node) -> builder.makeCall(operator, node));
+        // Only the composite operand type checker for UDFs are concerned here.
+        if (operator instanceof SqlUserDefinedFunction
+            && typeChecker instanceof CompositeOperandTypeChecker compositeTypeChecker) {
+          // UDFs implement their own composite type checkers, which always use OR logic for
+          // argument
+          // types. Verifying the composition type would require accessing a protected field in
+          // CompositeOperandTypeChecker. If access to this field is not allowed, type checking will
+          // be skipped, so we avoid checking the composition type here.
+          register(
+              functionName, wrapWithCompositeTypeChecker(operator, compositeTypeChecker, false));
+        } else if (typeChecker instanceof ImplicitCastOperandTypeChecker implicitCastTypeChecker) {
+          register(
+              functionName, wrapWithImplicitCastTypeChecker(operator, implicitCastTypeChecker));
+        } else if (typeChecker instanceof CompositeOperandTypeChecker compositeTypeChecker) {
+          // If compositeTypeChecker contains operand checkers other than family type checkers or
+          // other than OR compositions, the function with be registered with a null type checker,
+          // which means the function will not be type checked.
+          register(
+              functionName, wrapWithCompositeTypeChecker(operator, compositeTypeChecker, true));
+        } else if (typeChecker instanceof SameOperandTypeChecker comparableTypeChecker) {
+          // Comparison operators like EQUAL, GREATER_THAN, LESS_THAN, etc.
+          // SameOperandTypeCheckers like COALESCE, IFNULL, etc.
+          register(functionName, wrapWithComparableTypeChecker(operator, comparableTypeChecker));
+        } else if (typeChecker instanceof UDFOperandMetadata.IPOperandMetadata) {
+          register(
+              functionName,
+              createFunctionImpWithTypeChecker(
+                  (builder, arg1, arg2) -> builder.makeCall(operator, arg1, arg2),
+                  new PPLTypeChecker.PPLIPCompareTypeChecker()));
+        } else if (typeChecker instanceof UDFOperandMetadata.CidrOperandMetadata) {
+          register(
+              functionName,
+              createFunctionImpWithTypeChecker(
+                  (builder, arg1, arg2) -> builder.makeCall(operator, arg1, arg2),
+                  new PPLTypeChecker.PPLCidrTypeChecker()));
+        } else {
+          logger.info(
+              "Cannot create type checker for function: {}. Will skip its type checking",
+              functionName);
+          register(
+              functionName,
+              (RexBuilder builder, RexNode... node) -> builder.makeCall(operator, node));
+        }
       }
     }
 
@@ -974,12 +995,12 @@ public class PPLFuncImpTable {
 
   private static class Builder extends AbstractBuilder {
     private final Map<BuiltinFunctionName, List<Pair<CalciteFuncSignature, FunctionImp>>> map =
-            new HashMap<>();
+        new HashMap<>();
 
     @Override
     void register(BuiltinFunctionName functionName, FunctionImp implement) {
       CalciteFuncSignature signature =
-              new CalciteFuncSignature(functionName.getName(), implement.getTypeChecker());
+          new CalciteFuncSignature(functionName.getName(), implement.getTypeChecker());
       if (map.containsKey(functionName)) {
         map.get(functionName).add(Pair.of(signature, implement));
       } else {
